format the code so that spaces are not weird

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,6 @@ export(milo.umap)
 export(project_pseudotime_to_cell)
 export(setup_vdj_pseudobulk)
 export(vdj.pseudobulk)
+import(SingleCellExperiment)
 import(methods)
+import(rlang)
