--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,15 @@
 Package: dandelionR
-Title: What the Package Does (One Line, Title Case)
+Title: Single-cell Immune Repertoire Trajectory Analysis in R
 Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Authors@R:
+    c(person(given="Jiawei", family="Yu", email = "jiawei.yu@uq.edu.au", role = c("aut", "cre")),
+      person(given="Kelvin", family="Tuong", email = "z.tuong@uq.edu.au", role = c("aut"), comment = c(ORCID = "0000-0002-6735-6808")))
+Description: dandelionR is an R package for performing single-cell immune repertoire trajectory analysis, based on the original python implementation. It provides all the necessary tools to interface with scRepertoire and a custom implementation of absorbing markov chain for pseudotime inference, inspired based on the palantir python package.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Collate: 
+Collate:
     'check.R'
     'construct.markov.chain.R'
     'determ.multiscale.space.R'
