formatting milo.umap
also debuging in line 24, the parameter slot_name is unused.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(milo.umap)
 export(project_pseudotime_to_cell)
 export(setup_vdj_pseudobulk)
 export(vdj.pseudobulk)
+import(Seurat)
 import(SingleCellExperiment)
+import(igraph)
 import(methods)
 import(rlang)
