--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,8 @@ export(markov_probability)
 export(milo_umap)
 export(project_pseudotime_to_cell)
 export(setup_vdj_pseudobulk)
-export(vdj.pseudobulk)
+export(vdj_pseudobulk)
+import(Matrix)
 import(Seurat)
 import(SingleCellExperiment)
 import(igraph)
