markovchain to projection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,18 @@ export(milo_umap)
 export(project_pseudotime_to_cell)
 export(setup_vdj_pseudobulk)
 export(vdj_pseudobulk)
+import(MASS)
 import(Matrix)
+import(S4Vectors)
 import(Seurat)
 import(SingleCellExperiment)
+import(bluster)
+import(destiny)
 import(igraph)
 import(methods)
+import(miloR)
+import(package)
+import(purrr)
 import(rlang)
+import(spam)
 import(stats)
