--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(milo_umap)
 export(project_pseudotime_to_cell)
 export(setup_vdj_pseudobulk)
 export(vdj_pseudobulk)
+import(BiocGenerics)
 import(MASS)
 import(Matrix)
 import(S4Vectors)
