import to require namespace
functions before markov_probability()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,6 @@ Collate:
     'differentiation_probabilities.R'
     'filter.cells.R'
     'get.pbs.R'
-    'get.pbs.col.R'
     'markov_probability.R'
     'max.min.sampling.R'
     'milo_umap.R'
@@ -27,6 +26,8 @@ Collate:
     'terminal.state.from.markov.chain.R'
     'vdj_pseudobulk.R'
 Imports:
+    SingleCellExperiment
+Suggests:
     SingleCellExperiment,
     MASS,
     Matrix,
