--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,18 +5,15 @@ export(milo_umap)
 export(project_pseudotime_to_cell)
 export(setup_vdj_pseudobulk)
 export(vdj_pseudobulk)
-import(BiocGenerics)
 import(MASS)
 import(Matrix)
 import(S4Vectors)
-import(Seurat)
 import(SingleCellExperiment)
+import(SummarizedExperiment)
 import(bluster)
 import(destiny)
 import(igraph)
-import(methods)
 import(miloR)
 import(purrr)
-import(rlang)
 import(spam)
 import(stats)
