--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     c(person(given="Jiawei", family="Yu", email = "jiawei.yu@uq.edu.au", role = c("aut", "cre")),
       person(given="Kelvin", family="Tuong", email = "z.tuong@uq.edu.au", role = c("aut"), comment = c(ORCID = "0000-0002-6735-6808")))
 Description: dandelionR is an R package for performing single-cell immune repertoire trajectory analysis, based on the original python implementation. It provides all the necessary tools to interface with scRepertoire and a custom implementation of absorbing markov chain for pseudotime inference, inspired based on the palantir python package.
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
