--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,5 +44,6 @@ Suggests:
     spam,
     BiocGenerics,
     purrr
+VignetteBuilder: knitr
 URL: https://www.github.com/tuonglab/dandelionR/
 BugReports: https://www.github.com/tuonglab/dandelionR/issues
