--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Cache R packages
         uses: actions/cache@v4
+        with:
+          path: /home/runner/work/_temp/Library
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
