--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -30,6 +30,8 @@ jobs:
 
       - name: Cache R packages
         uses: actions/cache@v4
+        with:
+          path: /home/runner/work/_temp/Library
 
       - uses: r-lib/actions/setup-r-dependencies@v2
 
