--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -18,6 +18,8 @@ jobs:
           - { os: ubuntu-latest }
           - { os: macos-latest }
           - { os: windows-latest }
+    retry:
+      max_attempts: 10
     runs-on: ${{ matrix.config.os }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
