--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -35,9 +35,10 @@ jobs:
         uses: actions/cache@v4
         with:
           path: /home/runner/work/_temp/Library
-          key: ${{ runner.OS }}-r-cache-${{ hashFiles('.github/depends.Rds') }}
+          key: ${{ runner.OS }}-${{ steps.install-r.outputs.installed-r-version }}-cache-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: |
-            ${{ runner.OS }}-r-cache-
+            ${{ runner.OS }}-${{ steps.install-r.outputs.installed-r-version }}-cache-
+
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
