--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -23,7 +23,7 @@ jobs:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-r@v2
         id: install-r
@@ -36,9 +36,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: /home/runner/work/_temp/Library
-          key: ${{ runner.OS }}-${{ steps.install-r.outputs.installed-r-version }}-cache-${{ hashFiles('.github/depends.Rds') }}
+          key: ${{ runner.OS }}-R-${{ steps.install-r.outputs.installed-r-version }}-cache-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: |
-            ${{ runner.OS }}-${{ steps.install-r.outputs.installed-r-version }}-cache-
+            ${{ runner.OS }}-R-${{ steps.install-r.outputs.installed-r-version }}-cache-
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
