--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -21,7 +21,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-r@v2
         id: install-r
@@ -32,9 +32,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: /home/runner/work/_temp/Library
-          key: ${{ runner.OS }}-${{ steps.install-r.outputs.installed-r-version }}-cache-${{ hashFiles('.github/depends.Rds') }}
+          key: ${{ runner.OS }}-R-${{ steps.install-r.outputs.installed-r-version }}-cache-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: |
-            ${{ runner.OS }}-${{ steps.install-r.outputs.installed-r-version }}-cache-
+            ${{ runner.OS }}-R-${{ steps.install-r.outputs.installed-r-version }}-cache-
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
