--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -25,6 +25,8 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
         id: install-r
+        with:
+          use-public-rspm: true
 
       - uses: r-lib/actions/setup-pandoc@v2
 
