--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         config:
           - { os: ubuntu-latest }
-          - { os: macos-latest }
+          # - { os: macos-latest } # disabling until https://github.com/r-lib/actions/issues/950 is resolved
           - { os: windows-latest }
     runs-on: ${{ matrix.config.os }}
     env:
