--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -9,20 +9,36 @@ on:
   push:
     branches:
       - "master"
-      - "*"
 
 jobs:
   R-CMD-check:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        config:
+          - { os: ubuntu-latest }
+          # - { os: macos-latest } # disabling until https://github.com/r-lib/actions/issues/950 is resolved
+          - { os: windows-latest }
+    runs-on: ${{ matrix.config.os }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-r@v2
+        id: install-r
         with:
           use-public-rspm: true
+
+      - uses: r-lib/actions/setup-pandoc@v2
+
+      - name: Cache R packages
+        uses: actions/cache@v4
+        with:
+          path: /home/runner/work/_temp/Library
+          key: ${{ runner.OS }}-R-${{ steps.install-r.outputs.installed-r-version }}-cache-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: |
+            ${{ runner.OS }}-R-${{ steps.install-r.outputs.installed-r-version }}-cache-
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
