--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,27 +27,27 @@ Collate:
     'setup_vdj_pseudobulk.R'
     'vdj_pseudobulk.R'
 Imports:
+    miloR,
     SingleCellExperiment,
-    SummarizedExperiment,
-    miloR
+    SummarizedExperiment
 Suggests:
+    BiocGenerics,
+    bluster,
+    destiny,
+    igraph,
+    knitr,
     MASS,
     Matrix,
-    S4Vectors,
-    destiny,
-    rlang,
     methods,
-    Seurat,
-    igraph,
-    stats,
-    bluster,
-    spam,
-    BiocGenerics,
     purrr,
-    knitr
+    rlang,
+    S4Vectors,
+    Seurat,
+    spam,
+    stats
 VignetteBuilder: knitr
 URL: https://www.github.com/tuonglab/dandelionR/
 BugReports: https://www.github.com/tuonglab/dandelionR/issues
 Depends: 
-    R (>= 2.10)
+    R (>= 4.4.0)
 LazyData: true
