--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 biocViews: Software, ImmunoOncology, SingleCell
+LazyDataCompression:xz
 Collate:
     'check.R'
     'construct.markov.chain.R'
@@ -33,7 +34,6 @@ Imports:
     SummarizedExperiment
 Suggests:
     BiocGenerics,
-    scater,
     fields,
     bluster,
     destiny,
