plotting code improvement
using scater and ggplot2 to plot.
exclude package feild

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,7 @@ Suggests:
     scater,
     Seurat,
     spam,
+    RColorBrewer,
     stats
 VignetteBuilder: knitr
 URL: https://www.github.com/tuonglab/dandelionR/
