--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 biocViews: Software, ImmunoOncology, SingleCell
+LazyDataCompression:xz
 Collate:
     'check.R'
     'construct.markov.chain.R'
@@ -24,6 +25,7 @@ Collate:
     'markov_probability.R'
     'milo_umap.R'
     'project_pseudotime_to_cell.R'
+    'sce_vdj.R'
     'setup_vdj_pseudobulk.R'
     'vdj_pseudobulk.R'
 Imports:
@@ -32,6 +34,7 @@ Imports:
     SummarizedExperiment
 Suggests:
     BiocGenerics,
+    fields,
     bluster,
     destiny,
     igraph,
@@ -42,8 +45,10 @@ Suggests:
     purrr,
     rlang,
     S4Vectors,
+    scater,
     Seurat,
     spam,
+    RColorBrewer,
     stats
 VignetteBuilder: knitr
 URL: https://www.github.com/tuonglab/dandelionR/
