--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,4 +56,4 @@ URL: https://www.github.com/tuonglab/dandelionR/
 BugReports: https://www.github.com/tuonglab/dandelionR/issues
 Depends: 
     R (>= 4.4.0)
-LazyData: true
+LazyData: false
