--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,9 +23,9 @@ Collate:
     'getPbs.R'
     'projectProbability.R'
     'maxMinSampling.R'
+    'minMaxScale.R'
     'markovProbability.R'
     'miloUmap.R'
-    'minmaxScale.R'
     'projectPseudotimeToCell.R'
     'sce_vdj.R'
     'setupVdjPseudobulk.R'
