update vignette to be more descriptive (#18)
* Update dandelionR.rmd

* Update dandelionR.rmd

* Update DESCRIPTION

* vignette modification

1. change some expression in the vignette about:
    - setupVdjPseudobulk
    - project the pseudobulk back to cell
2. delete the extra example that is accidentally added during conflict solving

* swap to kelvin to be the contact as maintainer

* update spacing style to be consistent

* make sure the file names are correct

* Resolve #17

* fix a few warnings and notes

* fixing errors and notes

1. errors: could not find sce_vdj in markovProbability' s example
2. add LazyData to DESCRIPTION

* this should fix lazy loading

* fix?

* delete extra lazydata line in DESCRIPTION

* update document

* update description

* update document

* Rename minmaxScale.R to minMaxScale.R

* hopefully it works now?

---------

Co-authored-by: Yu Jiawei <jiawei.yu@uq.edu.au>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,31 +2,33 @@ Package: dandelionR
 Title: Single-cell Immune Repertoire Trajectory Analysis in R
 Version: 0.99.0
 Authors@R:
-    c(person(given="Jiawei", family="Yu", email = "jiawei.yu@uq.edu.au", role = c("aut", "cre"), comment = c(ORCID = "0009-0005-9170-7881")),
-      person(given="Kelvin", family="Tuong", email = "z.tuong@uq.edu.au", role = c("aut"), comment = c(ORCID = "0000-0002-6735-6808")))
+    c(person(given="Jiawei", family="Yu", email = "jiawei.yu@uq.edu.au", role = c("aut"), comment = c(ORCID = "0009-0005-9170-7881")),
+      person(given="Nicholas", family="Borcherding", email = "borcherding@wustl.edu", role = c("aut"), comment = c(ORCID = "0000-0003-1427-6342")),
+      person(given="Kelvin", family="Tuong", email = "z.tuong@uq.edu.au", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-6735-6808")))
 Description: dandelionR is an R package for performing single-cell immune repertoire trajectory analysis, based on the original python implementation. It provides all the necessary tools to interface with scRepertoire and a custom implementation of absorbing markov chain for pseudotime inference, inspired based on the palantir python package.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 biocViews: Software, ImmunoOncology, SingleCell
+LazyData: true
 LazyDataCompression: xz
 Collate:
     'check.R'
     'constructMarkovChain.R'
     'determMultiscaleSpace.R'
+    'terminalStateFromMarkovChain.R'
     'differentiationProbabilities.R'
     'filterCells.R'
     'getPbs.R'
     'projectProbability.R'
-    'markovProbability.R'
     'maxMinSampling.R'
+    'minMaxScale.R'
+    'markovProbability.R'
     'miloUmap.R'
-    'minmaxScale.R'
     'projectPseudotimeToCell.R'
     'sce_vdj.R'
     'setupVdjPseudobulk.R'
-    'terminalStateFromMarkovChain.R'
     'vdjPseudobulk.R'
 Imports:
     miloR,
@@ -55,4 +57,3 @@ URL: https://www.github.com/tuonglab/dandelionR/
 BugReports: https://www.github.com/tuonglab/dandelionR/issues
 Depends: 
     R (>= 4.4.0)
-LazyData: true
