--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -8,6 +8,9 @@ on:
 
 name: vignette
 
+env:
+  cache-version: "cache-v1"
+
 jobs:
   vignette:
     defaults:
@@ -23,10 +26,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/setup-r@v2
+      - name: Setup R and Bioconductor
+        uses: grimbough/bioc-actions/setup-bioc@v1
         id: install-r
         with:
-          use-public-rspm: true
+          bioc-version: release
+
+      - name: Get R version
+        id: R
+        run: |
+          R --version > VERSION
+          echo "version=$(head -1 VERSION | awk '{print $3}')" >> $GITHUB_OUTPUT
+        shell: bash -l {0}
+
+      - name: Get Bioconductor version
+        id: BIOC
+        run: |
+          echo "version=$R_BIOC_VERSION" >> $GITHUB_OUTPUT
+        shell: bash -l {0}
 
       - uses: r-lib/actions/setup-pandoc@v2
 
@@ -34,9 +51,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: /home/runner/work/_temp/Library
-          key: ${{ runner.OS }}-R-${{ steps.install-r.outputs.installed-r-version }}-cache-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: |
-            ${{ runner.OS }}-R-${{ steps.install-r.outputs.installed-r-version }}-cache-
+          key: ${{ env.cache-version }}-${{ matrix.config.os }}-biocversion-${{ steps.BIOC.outputs.version}}-r-${{ steps.R.outputs.version}}-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ env.cache-version }}-${{ matrix.config.os }}-biocversion-${{ steps.BIOC.outputs.version}}-r-${{ steps.R.outputs.version}}-
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
