updating imports and suggests
Using importFrom for functions - removes the requireNamespace() call and updates the dependencies with installation. This will prevent users from having to discover which packages they need to install while going through the workflow.

DESCRIPTION updated to reflect true imports.

Also updated function documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,27 +31,27 @@ Collate:
     'setupVdjPseudobulk.R'
     'vdjPseudobulk.R'
 Imports:
-    miloR,
-    SingleCellExperiment,
-    SummarizedExperiment
-Suggests:
     BiocGenerics,
-    BiocStyle,
     bluster,
-    destiny,
+    destiny, 
     igraph,
-    knitr,
     MASS,
     Matrix,
     methods,
+    miloR,
     purrr,
-    rlang,
     S4Vectors,
-    scater,
     Seurat,
+    SingleCellExperiment,
     spam,
-    RColorBrewer,
-    stats
+    stats,
+    SummarizedExperiment, 
+    rlang
+Suggests:
+    BiocStyle,
+    knitr,
+    scater,
+    RColorBrewer
 VignetteBuilder: knitr
 URL: https://www.github.com/tuonglab/dandelionR/
 BugReports: https://www.github.com/tuonglab/dandelionR/issues
