--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -108,7 +108,7 @@ jobs:
             Preview documentation for this PR (at commit ${{ github.event.pull_request.head.sha }})
 
   vignette-pr-clean:
-    if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' }}
+    if: (github.event.action == 'closed' || github.event.pull_request.merged == true)
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -122,7 +122,8 @@ jobs:
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-          preview_dir="preview/pr${{ github.event.pull_request.number }}"
+          # preview_dir="preview/pr${{ github.event.pull_request.number }}"
+          preview_dir=22
           if [ -d "$preview_dir" ]; then
             git rm -r $preview_dir
             git commit -m "Remove $preview_dir (GitHub Actions)" || echo 'No preview to remove'
