--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -63,3 +63,9 @@ jobs:
           needs: check
 
       - uses: r-lib/actions/check-r-package@v2
+
+      - name: Test coverage
+        if: contains('["zktuong", "Jiawei-Yu10"]', github.actor) && matrix.config.os == 'ubuntu-latest'
+        run: |
+          Rscript -e 'covr::codecov(token = "${{ secrets.CODECOV_TOKEN }}")'
+        shell: bash -l {0}
