deprecate dependency on Seurat
We don't need it actually. so just call `uwot::umap` directly

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Collate:
 Imports:
     miloR,
     SingleCellExperiment,
-    SummarizedExperiment
+    SummarizedExperiment,
+    uwot
 Suggests:
     BiocGenerics,
     BiocStyle,
@@ -45,12 +46,11 @@ Suggests:
     Matrix,
     methods,
     purrr,
+    RColorBrewer,
     rlang,
     S4Vectors,
     scater,
-    Seurat,
     spam,
-    RColorBrewer,
     stats
 VignetteBuilder: knitr
 URL: https://www.github.com/tuonglab/dandelionR/
