--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,6 @@ export(miloUmap)
 export(projectPseudotimeToCell)
 export(setupVdjPseudobulk)
 export(vdjPseudobulk)
-import(SingleCellExperiment)
-import(SummarizedExperiment)
-import(miloR)
 importFrom(BiocGenerics,type)
 importFrom(MASS,ginv)
 importFrom(Matrix,solve)
@@ -16,7 +13,9 @@ importFrom(Matrix,summary)
 importFrom(Matrix,t)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
-importFrom(Seurat,RunUMAP)
+importFrom(SingleCellExperiment,SingleCellExperiment)
+importFrom(SingleCellExperiment,colData)
+importFrom(SingleCellExperiment,reducedDim)
 importFrom(bluster,makeKNNGraph)
 importFrom(destiny,eigenvalues)
 importFrom(destiny,eigenvectors)
