--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,8 @@ importFrom(Matrix,t)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
 importFrom(SingleCellExperiment,SingleCellExperiment)
-importFrom(SingleCellExperiment,colData)
 importFrom(SingleCellExperiment,reducedDim)
+importFrom(SummarizedExperiment,colData)
 importFrom(bluster,makeKNNGraph)
 importFrom(destiny,eigenvalues)
 importFrom(destiny,eigenvectors)
