--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(miloUmap)
 export(projectPseudotimeToCell)
 export(setupVdjPseudobulk)
 export(vdjPseudobulk)
+import(SingleCellExperiment)
+import(miloR)
 importFrom(BiocGenerics,type)
 importFrom(MASS,ginv)
 importFrom(Matrix,solve)
@@ -13,9 +15,6 @@ importFrom(Matrix,summary)
 importFrom(Matrix,t)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
-importFrom(SingleCellExperiment,SingleCellExperiment)
-importFrom(SingleCellExperiment,reducedDim)
-importFrom(SummarizedExperiment,colData)
 importFrom(bluster,makeKNNGraph)
 importFrom(destiny,eigenvalues)
 importFrom(destiny,eigenvectors)
@@ -26,9 +25,7 @@ importFrom(igraph,components)
 importFrom(igraph,ends)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(methods,is)
-importFrom(miloR,Milo)
 importFrom(miloR,graph)
-importFrom(miloR,nhoods)
 importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(rlang,abort)
