Fixing knn. and importfrom SumarrizeExperiments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(projectPseudotimeToCell)
 export(setupVdjPseudobulk)
 export(vdjPseudobulk)
 import(SingleCellExperiment)
-import(SummarizedExperiment)
 import(miloR)
 importFrom(BiocGenerics,type)
 importFrom(MASS,ginv)
@@ -16,6 +15,7 @@ importFrom(Matrix,summary)
 importFrom(Matrix,t)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
+importFrom(SummarizedExperiment,"colData<-")
 importFrom(bluster,makeKNNGraph)
 importFrom(destiny,eigenvalues)
 importFrom(destiny,eigenvectors)
