Reset document update (#27)
* update function index to remove internal functions

* updating imports and suggests

Using importFrom for functions - removes the requireNamespace() call and updates the dependencies with installation. This will prevent users from having to discover which packages they need to install while going through the workflow.

DESCRIPTION updated to reflect true imports.

Also updated function documentation

* redo devtools::document()

* reorder and remove duplicate imports

* Fixing knn. and importfrom SumarrizeExperiments

---------

Co-authored-by: theHumanBorch <ncborch@gmail.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,27 +31,27 @@ Collate:
     'setupVdjPseudobulk.R'
     'vdjPseudobulk.R'
 Imports:
-    miloR,
-    SingleCellExperiment,
-    SummarizedExperiment,
-    uwot
-Suggests:
     BiocGenerics,
-    BiocStyle,
     bluster,
-    destiny,
+    destiny, 
     igraph,
-    knitr,
     MASS,
     Matrix,
     methods,
+    miloR,
     purrr,
-    RColorBrewer,
     rlang,
     S4Vectors,
-    scater,
+    SingleCellExperiment,
     spam,
-    stats
+    stats,
+    SummarizedExperiment,
+    uwot
+Suggests:
+    BiocStyle,
+    knitr,
+    RColorBrewer,
+    scater
 VignetteBuilder: knitr
 URL: https://www.github.com/tuonglab/dandelionR/
 BugReports: https://www.github.com/tuonglab/dandelionR/issues
