--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,37 @@ export(projectPseudotimeToCell)
 export(setupVdjPseudobulk)
 export(vdjPseudobulk)
 import(SingleCellExperiment)
-import(SummarizedExperiment)
 import(miloR)
+importFrom(BiocGenerics,type)
+importFrom(MASS,ginv)
+importFrom(Matrix,solve)
+importFrom(Matrix,sparseMatrix)
+importFrom(Matrix,summary)
+importFrom(Matrix,t)
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,SimpleList)
+importFrom(SummarizedExperiment,"colData<-")
+importFrom(bluster,makeKNNGraph)
+importFrom(destiny,eigenvalues)
+importFrom(destiny,eigenvectors)
+importFrom(igraph,"E<-")
+importFrom(igraph,E)
+importFrom(igraph,as_adjacency_matrix)
+importFrom(igraph,components)
+importFrom(igraph,ends)
+importFrom(igraph,graph_from_adjacency_matrix)
+importFrom(methods,is)
+importFrom(miloR,Milo)
+importFrom(miloR,graph)
+importFrom(miloR,nhoods)
+importFrom(purrr,map)
+importFrom(purrr,pmap)
+importFrom(rlang,abort)
+importFrom(spam,nearest.dist)
+importFrom(stats,contrasts)
+importFrom(stats,dist)
+importFrom(stats,median)
+importFrom(stats,model.matrix)
+importFrom(stats,qnorm)
+importFrom(stats,sd)
 importFrom(uwot,umap)
