--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -22,7 +22,7 @@ jobs:
           - { os: ubuntu-latest }
     runs-on: ${{ matrix.config.os }}
     env:
-      GITHUB_PAT: ${{ secrets.GH_PAT }}
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v4
 
@@ -97,7 +97,7 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: hasura/comment-progress@v2.2.0
         with:
-          github-token: ${{ secrets.GH_PAT }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.repository }}
           number: ${{ github.event.number }}
           id: pkgdown-deploy
